# fractalDesigner

./: .gitignore  CMakeLists.txt  P  build.sh  clean.sh  config.cmake  cscope.out  grep
.cache/clangd/index/: main.cpp.04AD871724225DEF.idx
buildsystem/cmake/: basictools.cmake  buildtools.cmake
buildsystem/libraries/: lib_VM.cmake
src/intern/: bApplication.cpp  bApplication.h  bIApplication.h  bsApplication.cpp  bsApplication.h  glwidget.cpp  glwidget.h  logo.cpp  logo.h  main.cpp  mainwindow.cpp  window.cpp  window.h
src/intern/bParser/: bBuffer.cpp  bBuffer.h  bParser.cpp  bsParser.h
src/intern/bUI/: bUIManager.h
src/intern/bsVM/: bsVM.h
